--- a/week-10/project-1.ipynb
+++ b/week-10/project-1.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -156,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Victor \n"
+      "Segun Da-Silver\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
     "        A.__init__(self, self.name)\n",
     "    \n",
     "# Object Instance\n",
-    "project = B(23, \"Victor \")\n",
+    "project = B(23, \"Segun Da-Silver\")\n",
     "print (project.name)\n"
    ]
   },
@@ -687,7 +687,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
