--- a/week-8/projects/project-1.ipynb
+++ b/week-8/projects/project-1.ipynb
@@ -76,7 +76,7 @@
     "lyst = ['CSC', '102', 'is', 'the', 'best', 'course', 'ever']\n",
     " \n",
     "# Calling DataFrame constructor on list\n",
-    "df = pd.DataFram(lyst)\n",
+    "df = pd.DataFrame(lyst)\n",
     "\n",
     "# Print the output.\n",
     "df"
@@ -91,18 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# intialise data of lists.\u001b[39;00m\n\u001b[32m      4\u001b[39m data = {\u001b[33m'\u001b[39m\u001b[33mName\u001b[39m\u001b[33m'\u001b[39m:[\u001b[33m'\u001b[39m\u001b[33mAngela\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mPrecious\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mLuis\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mAde\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m      5\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mAge\u001b[39m\u001b[33m'\u001b[39m:[\u001b[32m20\u001b[39m, \u001b[32m21\u001b[39m, \u001b[32m19\u001b[39m, \u001b[32m18\u001b[39m,\u001b[32m20\u001b[39m]}\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+      "\u001b[1;31mRunning cells with '.venv (Python 3.13.3)' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/eastw/Git Projects/School/k.victorCSC102/week-1/.venv/Scripts/python.exe\" -m pip install ipykernel -U --force-reinstall'"
      ]
     }
    ],
@@ -110,8 +109,8 @@
     "import pandas as pd\n",
     " \n",
     "# intialise data of lists.\n",
-    "data = {'Name':['Angela', 'Precious', 'Luis', 'Ade'],\n",
-    "        'Age':[20, 21, 19, 18,20]}\n",
+    "data = {\"Name\" : ['Angela', 'Precious', 'Luis', 'Ade'],\n",
+    "        \"Age\" : [20, 21, 19, 18, 20]}\n",
     " \n",
     "# Create DataFrame\n",
     "df = pd.DataFrame(data)\n",
@@ -277,7 +276,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '.venv (Python 3.13.3)' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/eastw/Git Projects/School/k.victorCSC102/week-1/.venv/Scripts/python.exe\" -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# importing pandas as pd\n",
     "import pandas as pd\n",
@@ -308,7 +318,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '.venv (Python 3.13.3)' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '\"c:/Users/eastw/Git Projects/School/k.victorCSC102/week-1/.venv/Scripts/python.exe\" -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# importing pandas as pd\n",
     "import pandas as pd\n",
@@ -435,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
